<resources>
    <string name="app_name">My Application</string>
    <string name="gocycle" />
    <string name="menu">MENU</string>
    <string name="meu_perfil">MEU PERFIL</string>
    <string name="qtdpontos">QtdPontos</string>
    <string name="seus_pontos">Seus Pontos</string>
    <string name="_90">90</string>
    <string name="_11_1234_5678">(11)1234-5678</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="name">Name</string>
    <string name="adress">Adress</string>
    <string name="_90_">90</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_email">Digite seu email</string>
    <string name="crie_sua_conta">Crie sua conta</string>
    <string name="login">LOGIN</string>
    <string name="mude_o_clima_v_de_bike">Mude o clima vá de bike</string>
</resources>