<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidElementNotAllowed -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/BackGround"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_optimizationLevel="ratio"
        app:srcCompat="@drawable/rectangle_3" />

    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/bebas_neue"
        android:gravity="center"
        android:text="@string/gocycle"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="GOCYCLE" />

    <ImageView
        android:id="@+id/BackgroundOpacity"
        android:layout_width="360dp"
        android:layout_height="487dp"
        android:adjustViewBounds="false"
        android:background="#00FFFFFF"
        android:importantForAccessibility="no"
        android:scaleType="fitXY"
        android:src="@drawable/group_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LOGIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/BackgroundOpacity"
        app:layout_constraintTop_toTopOf="@+id/BackgroundOpacity"
        tools:ignore="DuplicateIds"
        tools:text="LOGIN" />

    <EditText
        android:id="@+id/PasswordCamp"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="48dp"
        android:background="#252525"
        android:backgroundTint="#252525"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/digite_sua_senha"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/BackgroundOpacity"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddressCamp"
        tools:ignore="TextFields"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/EmailAddressCamp"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="124dp"
        android:background="#252525"
        android:backgroundTint="#252525"
        android:ems="10"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/digite_seu_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:password="false"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/BackgroundOpacity"
        app:layout_constraintTop_toTopOf="@+id/BackgroundOpacity"
        android:importantForAutofill="no"
        tools:ignore="Deprecated" />

    <ImageButton
        android:id="@+id/BtEntrar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#00FFFFFF"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="@+id/BackgroundOpacity"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/BackgroundOpacity"
        app:layout_constraintTop_toBottomOf="@+id/PasswordCamp"
        app:srcCompat="@drawable/frame_17__1_" />

    <ImageButton
        android:id="@+id/BtCadastrar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/BackgroundOpacity"
        app:layout_constraintStart_toStartOf="@+id/BackgroundOpacity"
        app:layout_constraintTop_toBottomOf="@+id/BtEntrar4"
        app:srcCompat="@drawable/frame_17"
        android:importantForAccessibility="no" />
</androidx.constraintlayout.widget.ConstraintLayout>